<resources>
    <string name="app_name">TaskManager</string>
    <string name="Config">Configuración</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="Log_Sign_in">INICIAR SESIÓN / REGISTRARSE</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="sign_in">Registrarse</string>
    <string name="credenciales_incorrectas">Credenciales incorrectas</string>
    <string name="agregar_tarea">Agregar tarea</string>
    <string name="agr_titulo">Título de la tarea</string>
    <string name="agr_descr">Descripción</string>
    <string name="agr_fecha">Fecha de finalización</string>
    <string name="agr_button">Guardar tarea</string>
    <string name="titulo_required">El título es obligatorio</string>
    <string name="fecha_required">Debes seleccionar una fecha final</string>
    <string name="err_usu_noauth">Error: Usuario no autenticado</string>
    <string name="tarea_añadida">Tarea añadida</string>
    <string name="err_tarea_añadida">Error al añadir la tarea</string>
    <string name="register_1">Por favor, completa todos los campos</string>
    <string name="register_2">Registro exitoso, inicia sesión</string>
    <string name="register_3">El usuario ya existe</string>
    <string name="idioma">Idioma</string>
    <string name="modo_noche">Modo oscuro</string>
    <string name="Proyectos">Proyectos</string>
    <string name="Editar">Editar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="edit_titulo">Editar título</string>
    <string name="edit_descr">Editar descripción</string>
    <string name="edit_fecha">Editar fecha</string>
    <string name="err_tarea_no_encontrada">Ha ocurrido un error, no se ha encontrado la tarea</string>
    <string name="tarea_actualizada">Se han actualizado los datos de la tarea</string>
    <string name="err_tarea_actualizada">No se ha podido actualizar la tarea</string>
    <string name="Editar_tarea">EDITAR TAREA</string>
    <string name="noti_deneg">Permiso de notificaciones denegado</string>
    <string name="felicidades">¡Felicidades!</string>
    <string name="tareas_completadas">Has completado todas tus tareas.</string>
    <string name="Atencion">¡Atención!</string>
    <string name="la_tarea">La tarea</string>
    <string name="vence_24">vence en menos de 24 horas.</string>
    <string name="selec_idioma">Selecciona el idioma</string>
    <string name="cancelar">Cancelar</string>
    <string name="mostrar_fecha">Mostrar fecha</string>
    <string name="ocultar_fecha">Ocultar fecha</string>
    <string name="config_fecha">Configurar fecha de finalización</string>
    <string name="search">Buscar</string>
    <string name="buscar_tareas">Buscar tareas...</string>
    <string name="err_sin_tareas">No hay tareas asignadas a ese dia</string>
    <string name="Calendario">Calendario</string>
    <string name="Añadir_nueva_ta">AÑADIR NUEVA TAREA</string>
    <string name="Ubicación">Ubicación</string>
    <string name="confirmar_ubicacion">Confirmar ubicación</string>
    <string name="selec_ubi">Selecciona una ubicación primero</string>
    <string name="no_ubi">No se pudo obtener la ubicación actual, usando valor por defecto</string>
    <string name="error_ubi">"Error al obtener la ubicación: "</string>
    <string name="ubi_denegado">Permiso de ubicación denegado</string>
    <string name="descr_icono">Tu ubicación actual</string>
    <string name="descr_selec_ubi">Ubicación seleccionada</string>
    <string name="err_obten_usu">Error al obtener lo datos del usuario</string>
    <string name="tomar_foto">Sacar foto</string>
    <string name="selec_galeria">Seleccionar de la galería</string>
    <string name="no_internet">No tienes conexión a Internet</string>
    <string name="err_bd_local">Error al registrarse en la base de datos local</string>
    <string name="err_des_foto">No se pudo conectar al servidor. Intentando recoger los ultimos datos guardados...</string>
    <string name="err_guard_imagen">Error al guardar la imagen</string>
    <string name="err_tamaño">La imagen supera el tamaño máximo permitido (15 MB)</string>
    <string name="err_bd_foto">Error al actualizar la base de datos local</string>
    <string name="err_http">"Error HTTP al conectarse: "</string>
    <string name="err_foto">Error al actualizar la imagen de perfil</string>
    <string name="serv_crear">Tarea registrada remotamente</string>
    <string name="serv_err_tarea">Error guardando la tarea en el servidor</string>
    <string name="err_sinc_tar_serv">Error sincronizando las tareas con el servidor, prueba con Internet</string>
    <string name="no_tareas">No hay tareas para mostrar</string>
</resources>