<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="263dp"
        android:layout_height="73dp"
        android:layout_marginTop="140dp"
        android:hint="@string/edit_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="261dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_descr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitulo" />

    <EditText
        android:id="@+id/etFechaFinalizacion"
        android:layout_width="260dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescripcion" />

    <Spinner
        android:id="@+id/spPrioridad"
        android:layout_width="168dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFechaFinalizacion" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_prim_button"
        android:backgroundTint="@null"
        android:textColor="@color/colorOnPrimary"
        android:text="@string/agr_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spPrioridad"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/Editar_tarea"
        android:textAlignment="center"
        android:textSize="20dp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/etTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
